# air_quality_bishkek

./: .gitignore  __main__.py  config.py  main.py  pyproject.toml  requirements.txt  weather_bot.py
air_quality_bishkek/: gidromet_scrapper.py  handlers.py  keyboards.py  weather_bot.py
